# mf50-tone-generator

./: .gitignore  README.md  pyproject.toml
mf50/: cli.py
tests/: test_cli.py
