[project]
name = "mf50-tone-generator"
version = "0.0.1"
requires-python = "~=3.11"
dependencies = [
    "camelot-py>=0.11.0,<0.12",
    "opencv-python>=4.9.0.80,<5",
    "ghostscript>=0.7,<0.8",
    "click>=8.1.7,<9",
    "requests>=2.32.3,<3",
]

[project.scripts]
doit = "mf50.cli:doit"

[dependency-groups]
dev = [
    "flake8>=7.0.0,<8",
    "black>=24.4.2,<25",
    "pytest>=8.2.1,<9",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
